<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="25dp"
    tools:context="com.simlerentertainment.todoapp.CreateTaskActivity">

    <TextView
        android:id="@+id/taskDescription_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/task_helper"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/taskDescription_helper"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/task_hint"
        android:inputType="text|textMultiLine|textCapSentences" />

    <TextView
        android:id="@+id/date_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/taskDescription"
        android:layout_marginTop="25dp"
        android:text="@string/date_helper"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date_helper"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date_hint"
        android:inputType="none"
        android:onClick="datePicker"
        android:textIsSelectable="false" />

    <Button
        android:id="@+id/submit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="101dp"
        android:onClick="addTaskAndLeave"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:text="@string/submit_task"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/delete_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/due_date"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#FFF"
        android:contentDescription="@string/delete_date_description"
        android:onClick="deleteDate"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_cancel_blue_24dp" />

    <EditText
        android:id="@+id/due_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/due_date"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/time_hint"
        android:inputType="none"
        android:onClick="timePicker"
        android:textIsSelectable="false" />

</RelativeLayout>
